fix weird margin spacing in skills section

--- a/src/Sections/SkillsSection.module.scss
+++ b/src/Sections/SkillsSection.module.scss
@@ -1,12 +1,18 @@
 .skillsList {
     list-style: none;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: 1fr;
     text-align: center;
-    width: 70%;
-    gap: 1.5rem;
+    column-gap: 10vw;
+    row-gap: 1.5rem;
 }
 
 .skillItemText {
     font-size: 2.5em;
+}
+
+@media (min-width: 700px) {
+    .skillsList {
+        grid-template-columns: 1fr 1fr;
+    }
 }
