--- a/src/components/SectionWrapper/SectionWrapper.module.scss
+++ b/src/components/SectionWrapper/SectionWrapper.module.scss
@@ -1,6 +1,5 @@
 .wrapper {
-    margin-block: 5rem;
-    margin-inline: 10vw;
+    margin: 5rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
