--- a/src/index.scss
+++ b/src/index.scss
@@ -61,15 +61,15 @@ a:focus {
 
 @media (min-width: 1200px) {
     h1 {
-        font-size: 5rem;
+        font-size: 4.5rem;
     }
 
     h2 {
-        font-size: 3.5rem;
+        font-size: 3rem;
     }
 
     h3 {
-        font-size: 2.5rem;
+        font-size: 2rem;
     }
 
     p {
